[package]
name = "blackjack"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = { version = "0.10.2", features = ["std", "thread_rng"] }
ratatui = { version = "0.30.2", features = ["std", "crossterm"] }
color-eyre = { version = "0.6.5" }
crossterm = { version = "0.29.0" }
tui-logger = { version = "0.18.3", features = ["crossterm"] }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23", features = ["std", "fmt"] }
tracing-appender = { version = "0.2.5" }
